fixed font issue
the font was having a bug when rendering where parts of the letter would overlap others.

--- a/style.css
+++ b/style.css
@@ -14,17 +14,17 @@ h1 {
     text-align: center;
     font-size: 5px;
     color: white;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
     font-weight: bold;
     -webkit-text-stroke: 2px black;
-    text-shadow: 0px 0px 150px white, 0px 0px 100px white;
+    text-shadow: 0px 0px 150px white, 0px 0px 20px white;
     box-shadow: 0px 0px 20px white, 0px 0px 70px rgb(1, 34, 73);
 
     position: relative;
     width: 1200px;
     height: 600px;
-    background: rgba(0,0,0,0.75);
+    background: rgba(0,0,0,0);
     border-radius: 100px;
 
     display: flex;
@@ -39,7 +39,7 @@ h1 {
     width: 1350px;
     height: 1350px;
     background-image: conic-gradient(#7700ff, #e19ff5, rgb(247, 181, 0), #ff0000);
-    animation: animate 4s ease-in-out infinite;
+    animation: animate 2s ease-in-out infinite;
 }
 
 .Main_words::after {
@@ -48,8 +48,8 @@ h1 {
     width: 1350px;
     height: 1350px;
     background-image: conic-gradient(#7700ff, #f5f112, #00e1ff, #7700ff);
-    animation: animate 4s  ease-in-out infinite;
-    animation-delay: -2s;
+    animation: animate 2s  ease-in-out infinite;
+    animation-delay: -1s;
     
 }
 
@@ -70,7 +70,7 @@ h1 {
     position: absolute;
     inset: 10px;
     background: #000000;
-    opacity: 95%;
+    opacity: 100%;
     border-radius: 70px;
     z-index: 1;
     outline: #f5f112;
